项目架构重构&&更新用户信息
